--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "neon-elements": "PolymerElements/neon-elements#1.0.0",
     "page": "visionmedia/page.js#~1.6.3",
     "lavu-grid": "leifoolsen/lavu-grid#~0.0.5",
-    "universal-footer": "*"
+    "universal-footer": "*",
+    "google-chart": "GoogleWebComponents/google-chart#~1.0.3"
   },
   "devDependencies": {
     "web-component-tester": "*",
