--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "page": "visionmedia/page.js#~1.6.3",
     "lavu-grid": "leifoolsen/lavu-grid#~0.0.5",
     "universal-footer": "*",
-    "google-chart": "GoogleWebComponents/google-chart#~1.0.3"
+    "google-chart": "GoogleWebComponents/google-chart#~1.0.3",
+    "firebase-element": "GoogleWebComponents/firebase-element#~1.0.8"
   },
   "devDependencies": {
     "web-component-tester": "*",
