modified the .jshintrc file to tolerate no semicolons and ignore functions begginning with caps.

--- a/.jshintrc
+++ b/.jshintrc
@@ -13,6 +13,8 @@
   "quotmark": "single",
   "undef": true,
   "unused": true,
+  "asi":true,
+  "newcap": false,
   "globals": {
     "wrap": true,
     "unwrap": true,
