Pushing up for Romina to look at to get an idea as to how the site should look. Redid the entire database because of problems with optimization. As such, a scrollbar element was added, as well as an extra scroll list was added. most of the changes occured in the firebase importer element, in order to reorganize the data. Will be working on getting everything hooked up here fairly soon.

--- a/.jshintrc
+++ b/.jshintrc
@@ -10,7 +10,8 @@
   "indent": 2,
   "latedef": true,
   "noarg": true,
-  "quotmark": "single",
+  "quotmark": "true",
+  "sub": true,
   "undef": true,
   "unused": true,
   "asi":true,
