Updated app to include polymer-fire element components.

--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "universal-footer": "*",
     "google-chart": "GoogleWebComponents/google-chart#~1.0.3",
     "firebase-element": "GoogleWebComponents/firebase-element#~1.0.8",
-    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#~1.1.1"
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#~1.1.1",
+    "polymerfire": "firebase/polymerfire#^0.10.3"
   },
   "devDependencies": {
     "web-component-tester": "*",
